sourcemaps are behind a flag, fixing #14
default is false,
set true for gulp build

--- a/src/griddler.scss
+++ b/src/griddler.scss
@@ -1,3 +1,5 @@
 // For Build purposes only. To use it in your project, include "../lib/griddler"
 
+$sourcemap: false;
+
 @import "../lib/griddler";
